SLING-8439 Add VM Options for Java 9 and up